--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,13 @@
 
 \item Równanie siatki dyfrakcyjnej
 
+Siatka dyfrakcyjna to zbiór szczelin: prostoliniowych, równoległych i równoodległych. Stała siatki (d) to ilość szczelin przypadających na 1 mm. Światło ze wszystkich szczelin rozkłada się na ekranie. Obserwowany jest obraz interferencyjny jak z dwóch szczeli, ale o lepszej rozdzielczości.\\
+Warunek wzmocnienia: $dsin\theta =m\uplambda$, gdzie $d$ - odległość między szczelinami, $\theta$ - kąt odchylenia
+
 \item prawo załamania
+
+Promień padający, promień załamany i normalna do powierzchni załamania, wystawiona w punkcie padania, leżą w jednej płaszczyźnie. Stosunek sinusa kąta padania $\alpha$ do sinusa kąta załamania $\beta$ dla dwóch ośrodków jest równy stosunkowi prędkości $v_1$ rozchodzenia się fali w pierwszym ośrodku do prędkości $v_2$ w drugim ośrodku
+$$\frac{sin\alpha}{sin\beta}=\frac{v_1}{v_2}$$
 
 \item efekt Comptona
 
