--- a/main.tex
+++ b/main.tex
@@ -36,9 +36,58 @@ $$\frac{sin\alpha}{sin\beta}=\frac{v_1}{v_2}$$
 
 \item efekt Comptona
 
-\item stan(?) stacjonarny, wzburzony
+rozpraszanie fal elektromagnetycznych na swobodnych elektronach -- doświadczalne potwierdzenie cząstkowej natury światła. Polega na pomiarze natężenia wiązki rozproszonej pod różnymi kątami $\varphi$ jako funkcja długości fali $\uplambda$
+\textbf{Wyniki doświadczenia Comptona}: Promieniowanie rozproszone ma dwie składowe o długościach fali: $\uplambda = \uplambda_0$ i $\uplambda = \uplambda_0 +\Delta\uplambda$. Przesunięcie Comptona $\Delta\uplambda$ zwiększa się wraz ze wzrostem kąta rozpraszania $\varphi$\\
+Przyjmując padające promieniowanie jako falę - pojawienie się fali rozproszonej o zmienionej długości fali nie daje się wyjaśnić. Przyjęcie hipotezy, że wiązka promieni X jest strumieniem fotonów o energi $hv$ pozwoliło Comptonowi wyjaśnić uzyskane wyniki\\
+Z zasady zachowania energii i zasady zachowania pędu -- wzór na przesunięcie Camptonowskie :
+$$\Delta\uplambda = \uplambda' -\uplambda_0 = \frac{h}{m_0c}\left(1-cos\varphi\right)$$
+$m_0$ - masa elektronu (spoczynkowa)
+
+\item stan stacjonarny, wzburzony
+
+Stan stacjonarny atomu, w którym elektron porusza się po orbicie o najniższej energii -- stan podstawowy, dla atomu wodoru
+$$E_1 = -13.6eV$$
+Stan wzbudzony -- stan, w którym energia elektronu jest wyższa, żnajduje się on na wyższej orbicie
+Wartości energii dozwolonych stanów stacjonarnych (skwantowane):
+$$E_n = \frac{E_1}{n^2}$$
+Największa (?) wartość = 0 dla $n=\infty$
 
 \item półprzewodniki, rodzaje, opis
+
+Podstawowe cechy:
+\begin{itemize}
+\item Konduktywność pomiędzy przewodnikami a izolatorami
+\item Przerwa energetyczna 0.1-2eV
+\item W temperatorze pokojowej występują elektrony w paśmie przewodnictwa
+\item Wraz ze wzrostem temperatury rezystancja półprzewodnika maleje
+\item Działając na półprzewodnik ciepłem, promieniowaniem, polami elektrycznym lub magnetycznym łatwo jest przenieść elektron z pasma podstawowego do pasma przewodnictwa
+\end{itemize}
+
+Półprzewodniki - dziury i elektrony - Zerwanie wiązania elektronowego jest równoznaczne z pojawieniem się luki w sieci wiązań międzyatomowych. \\
+
+Przejście pomiędzy pasmami -- generacja i rekombinacja pary dziura-elektron\\
+
+\textbf{Prąd w półprzewodniku:} \emph{elektronowy} w paśmie przewodnictwa w kierunku elektrody dodatniej, \emph{dziurowy} w paśmie podstawowym w kierunku elektrody ujemnej
+\begin{itemize}
+\item Ruchliwość dziur jest znacznie mniejsza od ruchliwości elektronów
+\item O przewodności półprzewodnika decyduje liczba jego elektronów i dziur
+\item Nośniki większościowe -- decydują o prądzie w półprzewodniku (większy wkład w przepływ prądu)
+\item Nośniki mniejszościowe -- mające mniejszy wpływ na przepływ prądu przez półprzewodnik
+\item W zależności od technologii wykonania nośnikami większościowymi mogą dziury lub elektrony
+\end{itemize}
+
+Przewodnictwo elektronowe (typu n) - przenoszenie łądunku elektrycznego przez ciało pod działaniem zewnętrznego pola elektrycznego. W modelu pasmowym krystalicznych ciał stałych zjawosko polegające na tym, że elektrony zajmujące stany kwantowe w obrębie pasma przewodnictwa przesuwają się do sąsiednich, nie obsadzonych stanów kwantowych w obrębie tego pasma, w kierunku przeciwnym do kierunku pola elektrycznego
+
+Przewodnictwo dziurowe (typu p) -- przenoszenie ładunku elektrycznego przez kryształ pod działaniem zewnętrznego pola elektrycznego, polegające na tym, że elektrony pozostające w niecałkowicie zapełnionym pamie podstawowym przesuwają się do niezajętych poziomów kwantowych (dziur elektronowych) w obrębie tego pasma w kierunku przeciwnym do wektora pola elektrycznego, co formalnie odpowiada przesuwaniu się ładunków dodatnich zgodnie z kierunkiem pola elektrycznego
+
+Materiały półprzewodnikowe:
+\begin{itemize}
+\item Półprzewodniki - grupa materiałów, które ze względu na przewodnictwo elektryczne zajmują pośrednie miejsce pomiędzy metalami a izolatorami.
+\item W dostatecznie niskich temperaturach półprzewodnik staje się izolatorem.
+\item W temperaturze zera bezwzględnego mają całkowicie obsadzone pasmo walencyjne i całkowicie puste pasmo przewodnictwa
+\item Zmiana elektrycznego w wyniku niewielkich zmian ich składu
+\item Dzielą się na samoistne i niesamoistne (typu p i n)
+\end{itemize}
 
 \item fala materii, długość fali de Broglie'a
 
