--- a/main.tex
+++ b/main.tex
@@ -132,11 +132,17 @@ Materiały półprzewodnikowe:
 
 \item wzór Einsteina do czegoś fotoelektrycznego(?!)
 
-\item Huygens - prawo, rysunek
+\item Huygens - prawo, rysunek $TODO: nie ma wzoru i rysunku
+
+Zasada Huygensa: Każdy punkt ośrodka, po dojściu do niego zaburzenia staje się źródłem cząstkowej fali kulistej. Styczna do wszystkich fal cząstkowych, wytworzonych przez sąsiadujące cząsteczki, jest powierzchnią falową fali. Prostopadła do powierzchni falowej to kierunek rozchodzenia się fali
 
 \item zależność oporu elektrycznego od wymiarów
 
 \item prawo Wiena
+
+Długość fali, dla której przypada maksimum emisji jest zgodnie z prawem Wiena odwrotnie proporcjonalna do temperatury ciała.
+$$\uplambda_{max}=\frac{C}{T}$$
+$C = 2.8978\cdot 10^{-3} m\cdot K$ - stała Wiena
 
 \item izotopy co to
 
