--- a/main.tex
+++ b/main.tex
@@ -132,7 +132,7 @@ Materiały półprzewodnikowe:
 
 \item wzór Einsteina do czegoś fotoelektrycznego(?!)
 
-\item Huygens - prawo, rysunek $TODO: nie ma wzoru i rysunku
+\item Huygens - prawo, rysunek TODO: nie ma wzoru i rysunku
 
 Zasada Huygensa: Każdy punkt ośrodka, po dojściu do niego zaburzenia staje się źródłem cząstkowej fali kulistej. Styczna do wszystkich fal cząstkowych, wytworzonych przez sąsiadujące cząsteczki, jest powierzchnią falową fali. Prostopadła do powierzchni falowej to kierunek rozchodzenia się fali
 
