--- a/main.tex
+++ b/main.tex
@@ -4,97 +4,104 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-\usepackage{graphicx}
+
+\usepackage[T1]{fontenc}
+\usepackage[pdftex]{graphicx}
+\usepackage{times}
+\usepackage{upgreek}
+\usepackage{ wasysym }
+
+
 \begin{document}
-
-\section{Grupa 1}
-\begin {enumerate}
-
-
-\item Dipol (moment dipolowy), rysunek, wzór
-
-\item Zależność kondensatora z dielektryka do wymiarów geometrycznych (wzór)
-
-\item siłą Lorentza i rysunek
-
- $$\vec{F_B}=q\vec{v}\times\vec{B}$$
- $$F_B = qv_dBsin90^o=\frac{IL}{v_d}v_dBsin90^o$$
- $$F_B=ILB$$
- $$\vec{F_B}=I\vec{L}\times\vec{B}$$
-
-\item Ciało doskonale czarne i Boltzmana
-
-\item Równanie siatki dyfrakcyjnej
-
-Siatka dyfrakcyjna to zbiór szczelin: prostoliniowych, równoległych i równoodległych. Stała siatki (d) to ilość szczelin przypadających na 1 mm. Światło ze wszystkich szczelin rozkłada się na ekranie. Obserwowany jest obraz interferencyjny jak z dwóch szczeli, ale o lepszej rozdzielczości.\\
-Warunek wzmocnienia: $dsin\theta =m\uplambda$, gdzie $d$ - odległość między szczelinami, $\theta$ - kąt odchylenia
-
-\item prawo załamania
-
-Promień padający, promień załamany i normalna do powierzchni załamania, wystawiona w punkcie padania, leżą w jednej płaszczyźnie. Stosunek sinusa kąta padania $\alpha$ do sinusa kąta załamania $\beta$ dla dwóch ośrodków jest równy stosunkowi prędkości $v_1$ rozchodzenia się fali w pierwszym ośrodku do prędkości $v_2$ w drugim ośrodku
-$$\frac{sin\alpha}{sin\beta}=\frac{v_1}{v_2}$$
-
-\item efekt Comptona
-
-rozpraszanie fal elektromagnetycznych na swobodnych elektronach -- doświadczalne potwierdzenie cząstkowej natury światła. Polega na pomiarze natężenia wiązki rozproszonej pod różnymi kątami $\varphi$ jako funkcja długości fali $\uplambda$
-\textbf{Wyniki doświadczenia Comptona}: Promieniowanie rozproszone ma dwie składowe o długościach fali: $\uplambda = \uplambda_0$ i $\uplambda = \uplambda_0 +\Delta\uplambda$. Przesunięcie Comptona $\Delta\uplambda$ zwiększa się wraz ze wzrostem kąta rozpraszania $\varphi$\\
-Przyjmując padające promieniowanie jako falę - pojawienie się fali rozproszonej o zmienionej długości fali nie daje się wyjaśnić. Przyjęcie hipotezy, że wiązka promieni X jest strumieniem fotonów o energi $hv$ pozwoliło Comptonowi wyjaśnić uzyskane wyniki\\
-Z zasady zachowania energii i zasady zachowania pędu -- wzór na przesunięcie Camptonowskie :
-$$\Delta\uplambda = \uplambda' -\uplambda_0 = \frac{h}{m_0c}\left(1-cos\varphi\right)$$
-$m_0$ - masa elektronu (spoczynkowa)
-
-\item stan stacjonarny, wzburzony
-
-Stan stacjonarny atomu, w którym elektron porusza się po orbicie o najniższej energii -- stan podstawowy, dla atomu wodoru
-$$E_1 = -13.6eV$$
-Stan wzbudzony -- stan, w którym energia elektronu jest wyższa, żnajduje się on na wyższej orbicie
-Wartości energii dozwolonych stanów stacjonarnych (skwantowane):
-$$E_n = \frac{E_1}{n^2}$$
-Największa (?) wartość = 0 dla $n=\infty$
-
-\item półprzewodniki, rodzaje, opis
-
-Podstawowe cechy:
-\begin{itemize}
-\item Konduktywność pomiędzy przewodnikami a izolatorami
-\item Przerwa energetyczna 0.1-2eV
-\item W temperatorze pokojowej występują elektrony w paśmie przewodnictwa
-\item Wraz ze wzrostem temperatury rezystancja półprzewodnika maleje
-\item Działając na półprzewodnik ciepłem, promieniowaniem, polami elektrycznym lub magnetycznym łatwo jest przenieść elektron z pasma podstawowego do pasma przewodnictwa
-\end{itemize}
-
-Półprzewodniki - dziury i elektrony - Zerwanie wiązania elektronowego jest równoznaczne z pojawieniem się luki w sieci wiązań międzyatomowych. \\
-
-Przejście pomiędzy pasmami -- generacja i rekombinacja pary dziura-elektron\\
-
-\textbf{Prąd w półprzewodniku:} \emph{elektronowy} w paśmie przewodnictwa w kierunku elektrody dodatniej, \emph{dziurowy} w paśmie podstawowym w kierunku elektrody ujemnej
-\begin{itemize}
-\item Ruchliwość dziur jest znacznie mniejsza od ruchliwości elektronów
-\item O przewodności półprzewodnika decyduje liczba jego elektronów i dziur
-\item Nośniki większościowe -- decydują o prądzie w półprzewodniku (większy wkład w przepływ prądu)
-\item Nośniki mniejszościowe -- mające mniejszy wpływ na przepływ prądu przez półprzewodnik
-\item W zależności od technologii wykonania nośnikami większościowymi mogą dziury lub elektrony
-\end{itemize}
-
-Przewodnictwo elektronowe (typu n) - przenoszenie łądunku elektrycznego przez ciało pod działaniem zewnętrznego pola elektrycznego. W modelu pasmowym krystalicznych ciał stałych zjawosko polegające na tym, że elektrony zajmujące stany kwantowe w obrębie pasma przewodnictwa przesuwają się do sąsiednich, nie obsadzonych stanów kwantowych w obrębie tego pasma, w kierunku przeciwnym do kierunku pola elektrycznego
-
-Przewodnictwo dziurowe (typu p) -- przenoszenie ładunku elektrycznego przez kryształ pod działaniem zewnętrznego pola elektrycznego, polegające na tym, że elektrony pozostające w niecałkowicie zapełnionym pamie podstawowym przesuwają się do niezajętych poziomów kwantowych (dziur elektronowych) w obrębie tego pasma w kierunku przeciwnym do wektora pola elektrycznego, co formalnie odpowiada przesuwaniu się ładunków dodatnich zgodnie z kierunkiem pola elektrycznego
-
-Materiały półprzewodnikowe:
-\begin{itemize}
-\item Półprzewodniki - grupa materiałów, które ze względu na przewodnictwo elektryczne zajmują pośrednie miejsce pomiędzy metalami a izolatorami.
-\item W dostatecznie niskich temperaturach półprzewodnik staje się izolatorem.
-\item W temperaturze zera bezwzględnego mają całkowicie obsadzone pasmo walencyjne i całkowicie puste pasmo przewodnictwa
-\item Zmiana elektrycznego w wyniku niewielkich zmian ich składu
-\item Dzielą się na samoistne i niesamoistne (typu p i n)
-\end{itemize}
-
-\item fala materii, długość fali de Broglie'a
-
-\item defekt masy i energia wiązania
-
-\item rodzaje reakcja jądra(rozpadu) i zależność z liczbą kwantową
-
+	
+	\section{Grupa 1}
+	\begin {enumerate}
+	
+	
+	\item Dipol (moment dipolowy), rysunek, wzór
+	
+	\item Zależność kondensatora z dielektryka do wymiarów geometrycznych (wzór)
+	
+	\item siłą Lorentza i rysunek
+	
+	$$\vec{F_B}=q\vec{v}\times\vec{B}$$
+	$$F_B = qv_dBsin90^o=\frac{IL}{v_d}v_dBsin90^o$$
+	$$F_B=ILB$$
+	$$\vec{F_B}=I\vec{L}\times\vec{B}$$
+	
+	\item Ciało doskonale czarne i Boltzmana
+	
+	\item Równanie siatki dyfrakcyjnej
+	
+	Siatka dyfrakcyjna to zbiór szczelin: prostoliniowych, równoległych i równoodległych. Stała siatki (d) to ilość szczelin przypadających na 1 mm. Światło ze wszystkich szczelin rozkłada się na ekranie. Obserwowany jest obraz interferencyjny jak z dwóch szczeli, ale o lepszej rozdzielczości.
+	Warunek wzmocnienia: $dsin\theta =m\uplambda$, gdzie $d$ - odległość między szczelinami, $\theta$ - kąt odchylenia
+	
+	\item prawo załamania
+	
+	Promień padający, promień załamany i normalna do powierzchni załamania, wystawiona w punkcie padania, leżą w jednej płaszczyźnie. Stosunek sinusa kąta padania $\alpha$ do sinusa kąta załamania $\beta$ dla dwóch ośrodków jest równy stosunkowi prędkości $v_1$ rozchodzenia się fali w pierwszym ośrodku do prędkości $v_2$ w drugim ośrodku
+	$$\frac{sin\alpha}{sin\beta}=\frac{v_1}{v_2}$$
+	
+	\item efekt Comptona
+	
+	rozpraszanie fal elektromagnetycznych na swobodnych elektronach -- doświadczalne potwierdzenie cząstkowej natury światła. Polega na pomiarze natężenia wiązki rozproszonej pod różnymi kątami $\varphi$ jako funkcja długości fali $\uplambda$
+	\textbf{Wyniki doświadczenia Comptona}: Promieniowanie rozproszone ma dwie składowe o długościach fali: $\uplambda = \uplambda_0$ i $\uplambda = \uplambda_0 +\Delta\uplambda$. Przesunięcie Comptona $\Delta\uplambda$ zwiększa się wraz ze wzrostem kąta rozpraszania $\varphi$
+	Przyjmując padające promieniowanie jako falę - pojawienie się fali rozproszonej o zmienionej długości fali nie daje się wyjaśnić. Przyjęcie hipotezy, że wiązka promieni X jest strumieniem fotonów o energii $hv$ pozwoliło Comptonowi wyjaśnić uzyskane wyniki
+	Z zasady zachowania energii i zasady zachowania pędu -- wzór na przesunięcie Camptonowskie :
+	$$\Delta\uplambda = \uplambda' -\uplambda_0 = \frac{h}{m_0c}\left(1-cos\varphi\right)$$
+	$m_0$ - masa elektronu (spoczynkowa)
+	
+	\item stan stacjonarny, wzburzony
+	
+	Stan stacjonarny atomu, w którym elektron porusza się po orbicie o najniższej energii -- stan podstawowy, dla atomu wodoru
+	$$E_1 = -13.6eV$$
+	Stan wzbudzony -- stan, w którym energia elektronu jest wyższa, żnajduje się on na wyższej orbicie
+	Wartości energii dozwolonych stanów stacjonarnych (skwantowane):
+	$$E_n = \frac{E_1}{n^2}$$
+	Największa (?) wartość = 0 dla $n=\infty$
+	
+	\item półprzewodniki, rodzaje, opis
+	
+	Podstawowe cechy:
+	\begin{itemize}
+		\item Konduktywność pomiędzy przewodnikami a izolatorami
+		\item Przerwa energetyczna 0.1-2eV
+		\item W temperatorze pokojowej występują elektrony w paśmie przewodnictwa
+		\item Wraz ze wzrostem temperatury rezystancja półprzewodnika maleje
+		\item Działając na półprzewodnik ciepłem, promieniowaniem, polami elektrycznym lub magnetycznym łatwo jest przenieść elektron z pasma podstawowego do pasma przewodnictwa
+	\end{itemize}
+	
+	Półprzewodniki - dziury i elektrony - Zerwanie wiązania elektronowego jest równoznaczne z pojawieniem się luki w sieci wiązań międzyatomowych. \\
+	
+	Przejście pomiędzy pasmami -- generacja i rekombinacja pary dziura-elektron\\
+	
+	\textbf{Prąd w półprzewodniku:} \emph{elektronowy} w paśmie przewodnictwa w kierunku elektrody dodatniej, \emph{dziurowy} w paśmie podstawowym w kierunku elektrody ujemnej
+	\begin{itemize}
+		\item Ruchliwość dziur jest znacznie mniejsza od ruchliwości elektronów
+		\item O przewodności półprzewodnika decyduje liczba jego elektronów i dziur
+		\item Nośniki większościowe -- decydują o prądzie w półprzewodniku (większy wkład w przepływ prądu)
+		\item Nośniki mniejszościowe -- mające mniejszy wpływ na przepływ prądu przez półprzewodnik
+		\item W zależności od technologii wykonania nośnikami większościowymi mogą dziury lub elektrony
+	\end{itemize}
+	
+	Przewodnictwo elektronowe (typu n) - przenoszenie łądunku elektrycznego przez ciało pod działaniem zewnętrznego pola elektrycznego. W modelu pasmowym krystalicznych ciał stałych zjawosko polegające na tym, że elektrony zajmujące stany kwantowe w obrębie pasma przewodnictwa przesuwają się do sąsiednich, nie obsadzonych stanów kwantowych w obrębie tego pasma, w kierunku przeciwnym do kierunku pola elektrycznego
+	
+	Przewodnictwo dziurowe (typu p) -- przenoszenie ładunku elektrycznego przez kryształ pod działaniem zewnętrznego pola elektrycznego, polegające na tym, że elektrony pozostające w niecałkowicie zapełnionym pamie podstawowym przesuwają się do niezajętych poziomów kwantowych (dziur elektronowych) w obrębie tego pasma w kierunku przeciwnym do wektora pola elektrycznego, co formalnie odpowiada przesuwaniu się ładunków dodatnich zgodnie z kierunkiem pola elektrycznego
+	
+	Materiały półprzewodnikowe:
+	\begin{itemize}
+		\item Półprzewodniki - grupa materiałów, które ze względu na przewodnictwo elektryczne zajmują pośrednie miejsce pomiędzy metalami a izolatorami.
+		\item W dostatecznie niskich temperaturach półprzewodnik staje się izolatorem.
+		\item W temperaturze zera bezwzględnego mają całkowicie obsadzone pasmo walencyjne i całkowicie puste pasmo przewodnictwa
+		\item Zmiana elektrycznego w wyniku niewielkich zmian ich składu
+		\item Dzielą się na samoistne i niesamoistne (typu p i n)
+	\end{itemize}
+	
+	\item fala materii, długość fali de Broglie'a
+	
+	\item defekt masy i energia wiązania
+	
+	\item rodzaje reakcja jądra(rozpadu) i zależność z liczbą kwantową
+	
 \end{enumerate}
 
 \section{Grupa 2}
@@ -107,24 +114,24 @@ Materiały półprzewodnikowe:
 
 \item liczby kwantowe
 
- \begin{itemize}
- 	\item Kwantyzacja właściwie wszystkich wielkości fizycznych, mierzonych w mikroświecie atomów i cząsteczek (wielkości mogą przyjmować tylko pewne ściśle określone wartości)
- 	\item Elektrony w atomie znajdują się na ściśle określonych orbitach
- 	\item Każdej orbicie elektronowej odpowiada pewna energia
- 	\item Bliższe badania pokazały, że w podobny sposób zachowują się także inne wielkości np pęd, moment pędu czy moment magnetyczny (kwantowaniu podlega tu nie tylko wartość, ale i położenie wektora w przestrzeni albo jego rzutu na wybraną oś) $\Rightarrow$ Ponumerowanie wszystkich możliwych wartości np energii czy momentu pędu, te numery to właśnie liczby kwantowe
- \end{itemize}
+\begin{itemize}
+	\item Kwantyzacja właściwie wszystkich wielkości fizycznych, mierzonych w mikroświecie atomów i cząsteczek (wielkości mogą przyjmować tylko pewne ściśle określone wartości)
+	\item Elektrony w atomie znajdują się na ściśle określonych orbitach
+	\item Każdej orbicie elektronowej odpowiada pewna energia
+	\item Bliższe badania pokazały, że w podobny sposób zachowują się także inne wielkości np pęd, moment pędu czy moment magnetyczny (kwantowaniu podlega tu nie tylko wartość, ale i położenie wektora w przestrzeni albo jego rzutu na wybraną oś) $\Rightarrow$ Ponumerowanie wszystkich możliwych wartości np energii czy momentu pędu, te numery to właśnie liczby kwantowe
+\end{itemize}
 
 \item postulaty Bohra
 
- \begin{itemize}
- 	\item Elektron w atomie wodoru porusza się po kołowej orbicie dookoła jądra pod wpływem siły coulombowskiej i zgodnie z prawami Newtona
- 	\item Elektron może poruszać się po takiej orbicie dla której moment pędu jest równy wielokrotności stałej Plancka
- 	$$mv_nr_n=n\frac{h}{2\pi}$$
- 	$v_n$ - prędkość elektronu na ntej orbicie, $r_n$ - promień ntej orbity, $n$ - główna liczba kwantowa, $h$ - stała Plancka
- 	\item Elektron poruszający się po orbicie stacjonarnej nie wypromieniowuje energii elektromagnetycznej
- 	\item Atom przechodząc ze stanu $E_n$ do stanu $E_k$ wypromieniowuje kwant energii
- 	$$hv = E_n-E_k$$
- \end{itemize}
+\begin{itemize}
+	\item Elektron w atomie wodoru porusza się po kołowej orbicie dookoła jądra pod wpływem siły coulombowskiej i zgodnie z prawami Newtona
+	\item Elektron może poruszać się po takiej orbicie dla której moment pędu jest równy wielokrotności stałej Plancka
+	$$mv_nr_n=n\frac{h}{2\pi}$$
+	$v_n$ - prędkość elektronu na ntej orbicie, $r_n$ - promień ntej orbity, $n$ - główna liczba kwantowa, $h$ - stała Plancka
+	\item Elektron poruszający się po orbicie stacjonarnej nie wypromieniowuje energii elektromagnetycznej
+	\item Atom przechodząc ze stanu $E_n$ do stanu $E_k$ wypromieniowuje kwant energii
+	$$hv = E_n-E_k$$
+\end{itemize}
 
 \item kąt graniczny
 
@@ -132,7 +139,7 @@ Materiały półprzewodnikowe:
 
 \item wzór Einsteina do czegoś fotoelektrycznego(?!)
 
-\item Huygens - prawo, rysunek TODO: nie ma wzoru i rysunku
+\item Huygens - prawo, rysunek @TODO: nie ma wzoru i rysunku
 
 Zasada Huygensa: Każdy punkt ośrodka, po dojściu do niego zaburzenia staje się źródłem cząstkowej fali kulistej. Styczna do wszystkich fal cząstkowych, wytworzonych przez sąsiadujące cząsteczki, jest powierzchnią falową fali. Prostopadła do powierzchni falowej to kierunek rozchodzenia się fali
 
